--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "tinymce-imageupload",
+    "name": "tinymce-images-upload",
     "version": "1.0.7",
     "description": "tinymce富文本图片上传插件",
     "main": "index.js",
@@ -10,19 +10,19 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/a410702849/tinymce-imageupload.git"
+        "url": "git+https://github.com/a410702849/tinymce-images-upload.git"
     },
     "keywords": [
         "tinymce",
-        "imageupload",
+        "images-upload",
         "图片上传"
     ],
-    "author": "junyanLiu",
+    "author": "hehongtao",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/a410702849/tinymce-imageupload/issues"
+        "url": "https://github.com/a410702849/tinymce-images-upload/issues"
     },
-    "homepage": "https://github.com/a410702849/tinymce-imageupload#readme",
+    "homepage": "https://github.com/a410702849/tinymce-images-upload#readme",
     "devDependencies": {
         "axios": "^0.18.0",
         "babel-plugin-transform-runtime": "^6.23.0",
